# lcsr_image_tools

./: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
camera_forker/: CMakeLists.txt  README.md  manifest.xml  package.xml
camera_forker/include/camera_forker/: camera_forker.h
camera_forker/launch/: quad_pub.launch  video_720x486.launch  video_960x720.launch
camera_forker/src/: camera_forker.cpp  camera_forker_node.cpp  video_file_player.cpp
cfg/: FakeCam.cfg
fakecam/: CMakeLists.txt  package.xml
fakecam/cfg/: FakeCam.cfg
fakecam/data/: camera_parameters.txt
fakecam/launch/: fakecam.launch  movie_file_publisher.launch  video_file_publisher.launch
fakecam/src/: fakecam_node.cpp  video_file_publisher.cpp
image_forker/: mainpage.dox  manifest.xml
image_forker/src/: image_forker.cpp
launch/: fakecam.launch
src/: fakecam_node.cpp  video_file_publisher.cpp
vid_pub/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
vid_pub/cfg/: VidPub.cfg
vid_pub/launch/: mov.launch  vid_pub.launch
vid_pub/src/: vid_pub.cpp
